deployments/kubernetes/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: bedrock-system
  labels:
    name: bedrock-system
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
